--- a/html/admin-login.html
+++ b/html/admin-login.html
@@ -32,15 +32,12 @@
   <!-- LOG IN -->
 
   <div class="login-container">
-  <div class="brand">MARK DANIEL</div>
-  <div class="brand-sub">S A D D L E R Y</div>
-
-    <h1>Admin Access</h1>
+    <h1>ADMIN</h1>
+    <div class="subtitle">MARK DANIEL SADDLERY</div>
 
     <form id="admin-login-form">
       <input type="email" id="email" placeholder="Admin Email" required />
       <input type="password" id="password" placeholder="Password" required />
-
       <button type="submit">LOGIN</button>
       <div class="error" id="error-msg"></div>
     </form>
