--- a/html/product.html
+++ b/html/product.html
@@ -69,6 +69,10 @@
 <p id="custom-fit-status" class="custom-fit-status"></p>
 </div>
 
+<p id="upload-loader" class="custom-fit-status" style="display:none;">
+  Uploading image…
+</p>
+
   <button class="add-to-cart">Add to Cart</button>
 
   <!-- Concierge note -->
